# OmniMemory

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENV_CONFIGS.md  INSTALL.md  README.md  README.txt  RELEASE_CHECKLIST.md  SECURITY.md  SEO_INDEXING.md  com.ollama.serve.plist  docker-compose.sh  docker-compose.yml  index.html  pyproject.toml  robots.txt  sitemap.xml
api/: deps.py  llm_cache.db  routes_memory.py
core/: async_scheduler.py  config.py  conversations.py  cross_session.py  db.py  db_postgres.py  doc_parser.py  embeddings.py  events.py  graph_memory.py  integrations_config.py  knowledge_base.py  knowledge_graph.py  langchain_integration.py  llm_config.py  memory.py  memory_consolidation.py  memory_decay.py  memory_extractor.py  memory_sqlite.py  prefs_infer.py  redact.py  request_context.py  retrieval.py  safe_json.py  search_config.py  search_match.py  vector_memory.py
docker/: README.md
docs/: architecture.md  live-demo-session.md  memory-agent-prompt.md  memory-data-model.md
examples/: advanced_memory_demo.py  live_memory_session_demo.py  run_live_demo.sh  run_live_demo_extended.sh  run_live_demo_short.sh
mcp_server/: __init__.py  config.py  memory_resources.py  memory_tools.py  server.py
memory_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
plugins/: __init__.py  base.py
scripts/: generate_architecture_diagram.py  generate_seo_assets.py
tests/: test_knowledge_graph_neo4j.py  test_knowledge_graph_neo4j_temporal.py  test_knowledge_graph_temporal.py  test_llm.py  test_mcp_smoke.py  test_neo4j_backend.py  test_postgres_e2e.py  (+3 more)
(+31 files in other folders)
